deploy/prow/gcsweb_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcsweb
  namespace: gcsweb
  labels:
    app: gcsweb
spec:
  rules:
  - host: gcsweb.prow.gardener.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gcsweb
            port:
              number: 80
  tls:
  - hosts:
    - gcsweb.prow.gardener.cloud
    secretName: gcsweb-ingress-tls
